# school-diary

./: .gitignore  README.md  alan_setup.sh  create_html.sh  just_installed.sh  mkdocs.yml  new_panel.sh  pyproject.toml  requirements.txt  setup.bat  setup.sh  tools.md  urls.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: django.yml
dashboard_example/: dashboard_example_code.py
dashboard_example/dashboard_templates/: create.html  dashboard.html  delete.html
docs/: api.md  index.md
docs/api/: authorization.md  timetable.md
docs/getting_started/: about.md  configuration.md
dump/: pupkin_marks_generator.sql
school_diary/: .settings.ini.swp  db.sqlite3  requirements.txt  utils.py
school_diary/accounts/: forms.py  urls.py  views.py
school_diary/admin_panel/: forms.py  urls.py  views.py
school_diary/api/: admin.py  models.py  permissions.py  urls.py
school_diary/core/: access.py  admin.py  forms.py  models.py
school_diary/diary/: admin.py  api_urls.py  api_views.py  decorators.py  forms.py  functions.py  managers.py  models.py  serializer.py  urls.py  utils.py  views.py
school_diary/grades/: forms.py  urls.py  views.py
school_diary/homework/: views.py
school_diary/klasses/: apps.py  forms.py  urls.py  views.py
school_diary/main/: forms.py  models.py  urls.py  views.py
school_diary/media/: converter_4tFkwTI.py
school_diary/minimum/: admin.py  api_urls.py  api_views.py  decorators.py  forms.py  models.py  serializer.py  urls.py  views.py
scripts/: create_controls.py  create_quarters.py  create_subjects.py  create_teachers.py
(+532 files in other folders)
